--- a/item-detail.html
+++ b/item-detail.html
@@ -12,8 +12,6 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="profile.html">Профиль</a></li>
-                <li id="login-link"><a href="login.html">Вход</a></li>
-                <li id="register-link"><a href="register.html">Регистрация</a></li>
             </ul>
         </nav>
     </header>
@@ -23,8 +21,8 @@
             <h2 id="item-title"></h2>
             <div class="image-slider">
                 <div class="slides" id="image-slides"></div>
-                <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-                <button class="next" onclick="changeSlide(1)">&#10095;</button>
+                <button class="prev" onclick="changeSlide(-1)" style="display: none;" id="prev-btn">&#10094;</button>
+                <button class="next" onclick="changeSlide(1)" style="display: none;" id="next-btn">&#10095;</button>
             </div>
             <p id="item-description"></p>
             <p id="item-price"></p>
@@ -38,6 +36,7 @@
         <p>&copy; 2023 Маркетплейс товаров ручной работы</p>
     </footer>
 
+    <script src="data.js"></script>
     <script>
         const params = new URLSearchParams(window.location.search);
         const itemId = params.get("id");
@@ -48,8 +47,7 @@
             return;
         }
 
-        let items = JSON.parse(localStorage.getItem("marketplaceItems")) || [];
-        const item = items.find(i => i.id == itemId);
+        const item = globalStorage.marketplaceItems.find(i => i.id == itemId);
 
         if (!item) {
             alert("Товар не найден!");
@@ -57,35 +55,45 @@
             return;
         }
 
-        document.getElementById("item-title").textContent = item.title;
-        document.getElementById("item-description").textContent = `Описание: ${item.description}`;
-        document.getElementById("item-price").textContent = `Цена: ${item.price} ₽`;
-        document.getElementById("item-city").textContent = `Город: ${item.city}`;
+        // Отображение данных товара
+        document.getElementById("item-title").textContent = item.title || "Товар без названия";
+        document.getElementById("item-description").textContent = `Описание: ${item.description || "Отсутствует"}`;
+        document.getElementById("item-price").textContent = `Цена: ${item.price || 0} ₽`;
+        document.getElementById("item-city").textContent = `Город: ${item.city || "Не указан"}`;
 
-        const users = JSON.parse(localStorage.getItem("marketplaceUsers")) || [];
-        const seller = users.find(user => user.username === item.seller);
-
+        // Отображение номера продавца
+        const seller = globalStorage.marketplaceUsers.find(user => user.username === item.seller);
         if (seller && seller.phone) {
             document.getElementById("seller-phone").textContent = `Телефон продавца: ${seller.phone}`;
         } else {
             document.getElementById("seller-phone").textContent = "Телефон продавца недоступен.";
         }
 
-        const chatLink = document.getElementById("chat-link");
-        chatLink.href = `chat.html?seller=${item.seller}`;
-
+        // Отображение слайдера изображений
         const slidesContainer = document.getElementById("image-slides");
-        slidesContainer.innerHTML = item.images.map((img, index) => `
-            <div class="slide ${index === 0 ? 'active' : ''}">
-                <img src="${img}" alt="${item.title}">
-            </div>
-        `).join("");
+        const prevBtn = document.getElementById("prev-btn");
+        const nextBtn = document.getElementById("next-btn");
+
+        if (item.images && item.images.length > 0) {
+            slidesContainer.innerHTML = item.images.map((img, index) => `
+                <div class="slide ${index === 0 ? 'active' : ''}">
+                    <img src="${img}" alt="${item.title}">
+                </div>
+            `).join("");
+
+            prevBtn.style.display = "block";
+            nextBtn.style.display = "block";
+        } else {
+            slidesContainer.innerHTML = `<p>Изображения отсутствуют.</p>`;
+        }
 
         let currentSlideIndex = 0;
 
         function changeSlide(step) {
             const slides = document.querySelectorAll(".slide");
             const totalSlides = slides.length;
+
+            if (totalSlides <= 1) return;
 
             slides[currentSlideIndex].classList.remove("active");
 
